readme: agregar apuntadores git
Actualizacion de la tabla de usuarios en INDEX

Ignorando archivos creado por IDE

index.html: agregar bootstrap y navbar

styles: agregar estilos generales y tipografia

agregue un contacto

styles: agregar aspecto general de tabla

styles: agregar propuesta tabla clasica

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ## Archivos de Registro
+*.idea
 *.txt
 *.log
 *.reg
@@ -12,6 +13,7 @@ temp/
 tmp/
 
 ## Carpetas excluidas
+.idea/
 node_modules/
 logs/
 docs/
